<resources>
    <string name="app_name">时钟</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">第 %1$d页</string>
    <string name="alarm_clock">闹钟</string>
    <string name="time">时钟</string>
    <string name="Stopwatch">秒表</string>
    <string name="timer">计时器</string>
    <string name="add_alarm">添加时钟</string>
    <string name="alarm_repeat">闹钟重复</string>
    <string name="alarm_repeat_once">响一次</string>
    <string name="alarm_bell">铃声</string>
    <string name="alarm_bell_choices_default">默认</string>
    <string name="alarm_vibrate">响铃时震动</string>
    <string name="alarm_detele_afterbelled">响铃后删除此闹钟</string>
    <string name="alarm_remarks">备注</string>
    <string name="stopwatch_tips_reset">长按暂停键重置</string>
</resources>
