<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/btn_exit"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_exit" />

        <TextView
            android:id="@+id/btn_logo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:layout_weight="10"
            android:background="#F2F2F2"
            android:gravity="center"
            android:text="@string/add_alarm"
            android:textColor="#5b80f0"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/btn_confirm"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_confirm" />
    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TimePicker
                android:id="@+id/timepicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:amPmBackgroundColor="#FFFFFF"
                android:amPmTextColor="#5B80F0"
                android:background="#FFFFFF"
                android:numbersBackgroundColor="#00BAFF"
                android:numbersSelectorColor="#FFFFFF"
                android:numbersTextColor="#FFFFFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/alarm_repeat"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10" />

                <TextView
                    android:id="@+id/btn_bell"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_bg_grey"
                    android:gravity="center"
                    android:text="@string/alarm_repeat_once"
                    android:textColor="#000000"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/alarm_bell"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10" />

                <TextView
                    android:id="@+id/btn_bell"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_bg_grey"
                    android:gravity="center"
                    android:text="@string/alarm_bell_choices_default"
                    android:textColor="#000000"
                    android:textSize="15sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_vibrate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center|left"
                android:text="@string/alarm_vibrate"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_delete"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center|left"
                android:text="@string/alarm_detele_afterbelled"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_remarks"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center|left"
                android:text="@string/alarm_remarks"
                android:textColor="#000000"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>